--- a/src/Help/Help.module.scss
+++ b/src/Help/Help.module.scss
@@ -65,6 +65,8 @@
 
 .row svg {
   flex-shrink: 0;
+  width: 1.5em;
+  height: 1.5em;
   color: var(--color-sakura);
 }
 
